changed border-radius and added overflow hidden to avoid targeting individual corners on each card

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@ main {
     display: flex;
     max-width: 768px;
     flex-wrap: wrap;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .card {
@@ -43,7 +45,6 @@ main {
 
 .card-1 {
     background-color: #e38826;
-    border-radius: 8px 0 0 8px;
 }
 
 .card-1 a {
@@ -70,7 +71,6 @@ main {
 
 .card-3 {
     background-color: #004241;
-    border-radius: 0 8px 8px 0;
 }
 
 .card-3 a {
@@ -126,13 +126,5 @@ footer {
     .card-2 a,
     .card-3 a {
         margin-top: 0;
-    }
-
-    .card-1 {
-        border-radius: 8px 8px 0 0 ;
-    }
-
-    .card-3 {
-        border-radius: 0 0 8px 8px;
     }
 }
